margin on hero section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,6 +54,7 @@ h6 {
 
 .ant-collapse-item .ant-collapse-header-text {
   font-size: 1.1rem !important;
+  color: #1F2A37 !important;
 }
 
 .anticon.ant-collapse-arrow svg {
